# ai_assistant_core

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
examples/: quick_chat.rs  serve_model.rs  serve_with_nat.rs
src/: detect_providers.rs  error.rs  lib.rs  nat.rs  provider.rs  serve.rs  server.rs  types.rs
